--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,5 +26,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: your-dockerhub-username/gatesentry-ai:latest
